--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "core-js": "^3.8.2",
         "deepai": "^1.0.17",
         "firebase": "^7.24.0",
+        "vee-validate": "^3.4.14",
         "vue": "^2.6.12",
         "vue-router": "^2.8.1",
         "vue-youtube-embed": "^2.2.2",
