--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "jquery": "^3.6.0",
         "vee-validate": "^3.4.14",
         "vue": "^2.6.12",
+        "vue-i18n": "^8.27.2",
         "vue-router": "^2.8.1",
         "vue-youtube-embed": "^2.2.2",
         "vuetify": "^2.4.2"
